fix bkgrd video flicker, complete testimonial sect

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -10,7 +10,3 @@ html {
   font-size: 62.5%;
   /* default font size 16px, we want 10px root font size (helps with REM calculations later. 16/10 = .625 or 62.5% */
 }
-
-body {
-  box-sizing: border-box;
-}
