--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -3,7 +3,7 @@
 }
 
 .u-margin-bottom-big {
-  margin-bottom: 8rem;
+  margin-bottom: 6rem;
 }
 
 .u-margin-bottom-medium {
@@ -15,7 +15,7 @@
 }
 
 .u-margin-top-big {
-  margin-top: 8rem;
+  margin-top: 6rem;
 }
 
 .u-margin-top-huge {
