--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -1,7 +1,7 @@
 .composition {
   position: relative;
 
-  &_photo {
+  &__photo {
     width: 55%;
     box-shadow: 0 1.5rem 4rem rgba($color-black, 0.4);
     position: absolute;
@@ -32,7 +32,7 @@
     }
   }
 
-  &:hover &_photo:not(:hover) {
+  &:hover &__photo:not(:hover) {
     transform: scale(0.95);
   }
 }
