--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -7,7 +7,7 @@
   box-shadow: $box-shadow;
   transition: transform 0.3s;
 
-  &_icon {
+  &__icon {
     font-size: 6rem;
     margin-bottom: 0.5rem;
     color: transparent;
