--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -2,14 +2,14 @@
   width: 75%;
   margin: 0 auto; //block element inside block element
   box-shadow: 0 3rem 6rem rgba($color-black, 0.1);
-  background-color: $color-white;
+  background-color: rgba($color-white, 0.6);
   border-radius: 3px;
   padding: 6rem;
   padding-left: 9rem;
   font-size: $default-font-size;
   transform: skewX(-12deg);
 
-  &_shape {
+  &__shape {
     width: 15rem;
     height: 15rem;
     float: left;
@@ -22,39 +22,38 @@
     overflow: hidden;
   }
 
-  &_image {
+  &__image {
     height: 100%;
     transform: translateX(-4rem) scale(1.4);
     backface-visibility: hidden;
     transition: all 0.8s;
   }
 
-  &_text {
+  &__text {
     transform: skewX(12deg);
   }
 
-  &_caption {
+  &__caption {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, 20%);
-    opacity: 0;
     color: $color-white;
     text-transform: uppercase;
     font-size: 1.7rem;
-    transition: all 0.8s;
     text-align: center;
+    opacity: 0;
+    transition: all 0.5s;
     backface-visibility: hidden;
   }
 
-  &:hover &_caption {
+  &:hover &__caption {
     opacity: 1;
     transform: translate(-50%, -50%);
   }
 
-  &:hover &_image {
-    backface-visibility: hidden;
+  &:hover &__image {
     transform: translateX(-4rem) scale(1);
-    filter: blur(2px) brightness(80%);
+    filter: blur(3px) brightness(80%);
   }
 }
