--- a/sass/main.css
+++ b/sass/main.css
@@ -84,10 +84,6 @@ html {
 }
 
 body {
-  box-sizing: border-box;
-}
-
-body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
   /* font-size: 16px; */
@@ -166,7 +162,7 @@ body {
 }
 
 .u-margin-bottom-big {
-  margin-bottom: 8rem;
+  margin-bottom: 6rem;
 }
 
 .u-margin-bottom-medium {
@@ -178,11 +174,28 @@ body {
 }
 
 .u-margin-top-big {
-  margin-top: 8rem;
+  margin-top: 6rem;
 }
 
 .u-margin-top-huge {
   margin-top: 10rem;
+}
+
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  opacity: 0.23;
+  overflow: hidden;
+}
+.bg-video__content {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 /* BUTTON SECTION */
@@ -270,7 +283,7 @@ body {
   position: relative;
   height: 52rem;
 }
-.card_side {
+.card__side {
   height: 52rem;
   transition: all 0.8s ease;
   position: absolute;
@@ -283,28 +296,28 @@ body {
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
   overflow: hidden;
 }
-.card_side--front {
+.card__side--front {
   background-color: #fff;
 }
-.card_side--back {
+.card__side--back {
   transform: rotateY(180deg);
 }
-.card_side--back-1 {
+.card__side--back-1 {
   background-image: linear-gradient(to right bottom, #ffb900, #ff7730);
 }
-.card_side--back-2 {
+.card__side--back-2 {
   background-image: linear-gradient(to right bottom, #7ed56f, #28b485);
 }
-.card_side--back-3 {
+.card__side--back-3 {
   background-image: linear-gradient(to right bottom, #2998ff, #5643fa);
 }
-.card:hover .card_side--front {
+.card:hover .card__side--front {
   transform: rotateY(-180deg);
 }
-.card:hover .card_side--back {
+.card:hover .card__side--back {
   transform: rotateY(0);
 }
-.card_picture {
+.card__picture {
   background-size: cover;
   height: 23rem;
   background-blend-mode: screen;
@@ -313,16 +326,16 @@ body {
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
 }
-.card_picture--1 {
+.card__picture--1 {
   background-image: linear-gradient(to right bottom, #ffb900, #ff7730), url(/imgs/nat-5.jpg);
 }
-.card_picture--2 {
+.card__picture--2 {
   background-image: linear-gradient(to right bottom, #7ed56f, #28b485), url(/imgs/nat-6.jpg);
 }
-.card_picture--3 {
+.card__picture--3 {
   background-image: linear-gradient(to right bottom, #2998ff, #5643fa), url(/imgs/nat-7.jpg);
 }
-.card_heading {
+.card__heading {
   font-size: 2.8rem;
   font-weight: 300;
   text-transform: uppercase;
@@ -333,37 +346,37 @@ body {
   right: 2rem;
   width: 75%;
 }
-.card_heading-span {
+.card__heading-span {
   padding: 1rem 1.5rem;
   -webkit-box-decoration-break: clone;
   box-decoration-break: clone;
 }
-.card_heading-span--1 {
+.card__heading-span--1 {
   background-image: linear-gradient(to right bottom, rgba(255, 185, 0, 0.85), rgba(255, 119, 48, 0.85));
 }
-.card_heading-span--2 {
+.card__heading-span--2 {
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.85), rgba(40, 180, 133, 0.85));
 }
-.card_heading-span--3 {
+.card__heading-span--3 {
   background-image: linear-gradient(to right bottom, rgba(41, 152, 255, 0.85), rgba(86, 67, 250, 0.85));
 }
-.card_details {
+.card__details {
   padding: 3rem;
 }
-.card_details ul {
+.card__details ul {
   list-style: none;
   width: 80%;
   margin: 0 auto;
 }
-.card_details ul li {
+.card__details ul li {
   text-align: center;
   font-size: 1.5rem;
   padding: 1rem;
 }
-.card_details ul li:not(:last-child) {
+.card__details ul li:not(:last-child) {
   border-bottom: 1px solid #eeeeee;
 }
-.card_cta {
+.card__cta {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -371,16 +384,16 @@ body {
   width: 90%;
   text-align: center;
 }
-.card_price-box {
+.card__price-box {
   text-align: center;
   margin-bottom: 4rem;
   color: #fff;
 }
-.card_price-only {
+.card__price-only {
   font-size: 1.4rem;
   text-transform: uppercase;
 }
-.card_price-value {
+.card__price-value {
   font-size: 6rem;
   font-weight: 100;
 }
@@ -388,32 +401,32 @@ body {
 .composition {
   position: relative;
 }
-.composition_photo {
+.composition__photo {
   width: 55%;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
   position: absolute;
   transition: all 0.2s;
   outline-offset: 2rem;
 }
-.composition_photo--p1 {
+.composition__photo--p1 {
   left: 0;
   top: -2rem;
 }
-.composition_photo--p2 {
+.composition__photo--p2 {
   right: 0;
   top: 2rem;
 }
-.composition_photo--p3 {
+.composition__photo--p3 {
   left: 20%;
   top: 10rem;
 }
-.composition_photo:hover {
+.composition__photo:hover {
   outline: 1.5rem solid #55c57a;
   transform: scale(1.05) translateY(-0.5rem);
   box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
   z-index: 20;
 }
-.composition:hover .composition_photo:not(:hover) {
+.composition:hover .composition__photo:not(:hover) {
   transform: scale(0.95);
 }
 
@@ -426,7 +439,7 @@ body {
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
   transition: transform 0.3s;
 }
-.feature-box_icon {
+.feature-box__icon {
   font-size: 6rem;
   margin-bottom: 0.5rem;
   color: transparent;
@@ -443,14 +456,14 @@ body {
   width: 75%;
   margin: 0 auto;
   box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.6);
   border-radius: 3px;
   padding: 6rem;
   padding-left: 9rem;
   font-size: 1.6rem;
   transform: skewX(-12deg);
 }
-.story_shape {
+.story__shape {
   width: 15rem;
   height: 15rem;
   float: left;
@@ -461,39 +474,37 @@ body {
   position: relative;
   overflow: hidden;
 }
-.story_image {
+.story__image {
   height: 100%;
   transform: translateX(-4rem) scale(1.4);
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
   transition: all 0.8s;
 }
-.story_text {
+.story__text {
   transform: skewX(12deg);
 }
-.story_caption {
+.story__caption {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, 20%);
-  opacity: 0;
   color: #fff;
   text-transform: uppercase;
   font-size: 1.7rem;
-  transition: all 0.8s;
   text-align: center;
+  opacity: 0;
+  transition: all 0.5s;
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
 }
-.story:hover .story_caption {
+.story:hover .story__caption {
   opacity: 1;
   transform: translate(-50%, -50%);
 }
-.story:hover .story_image {
-  -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
+.story:hover .story__image {
   transform: translateX(-4rem) scale(1);
-  filter: blur(2px) brightness(80%);
+  filter: blur(3px) brightness(80%);
 }
 
 .row {
@@ -590,5 +601,5 @@ body {
 
 .section-stories {
   padding: 15rem 0;
-  background-color: #f7f7f7;
+  position: relative;
 }/*# sourceMappingURL=main.css.map */
